--- a/11. Sequelize/package.json
+++ b/11. Sequelize/package.json
@@ -14,7 +14,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-handlebars": "3.0",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
